--- a/angular-src/src/main/web/src/assets/i18n/en.json
+++ b/angular-src/src/main/web/src/assets/i18n/en.json
@@ -1,6 +1,9 @@
 {
     "HOME": {
-        "TITLE": "Z' project",
-        "SELECT": "Changer la langue"
+      "TITLE": "Z' project"
+    },
+    "WELCOME": {
+      "CHAPTER": "Программный комплекс для имитационного моделирования рождения Z’-бозонов в протон-протонных столкновениях с учетом эффектов Z-Z’ смешивания",
+      "TEXT": "Изучение появления электрослабых бозонов дает мощную проверку спонтанного нарушения калибровочной симметрии стандартной модели (СМ) и может быть использовано для поиска новых явлений за пределами СМ. Дополнительные нейтральные векторные бозоны $Z^\\prime$, распадающиеся на заряженные пары калибровочных векторных бозонов $W^+W^-$, прогнозируются во многих сценариях новой физики, включая модели с расширенным калибровочным сектором."
     }
-}
+  }
