--- a/angular-src/src/main/web/src/assets/i18n/ru.json
+++ b/angular-src/src/main/web/src/assets/i18n/ru.json
@@ -1,44 +1,44 @@
 {
   "MENU": {
-    "TITLE": "Menu",
-    "HEAD_TITLE": "Z' project",
-    "WELCOME_TITLE": "Welcome",
-    "GRAPH_TITLE": "Graph",
-    "RESULT_GRAPH_TITLE": "Result Graph",
-    "STATISTIC_TITLE": "Statistic"
+    "TITLE": "Меню",
+    "HEAD_TITLE": "Z' проект",
+    "WELCOME_TITLE": "Введение",
+    "GRAPH_TITLE": "График",
+    "RESULT_GRAPH_TITLE": "Результат",
+    "STATISTIC_TITLE": "Статистика"
   },
   "WELCOME": {
     "CHAPTER": "Программный комплекс для имитационного моделирования рождения Z’-бозонов в протон-протонных столкновениях с учетом эффектов Z-Z’ смешивания",
     "TEXT": "Изучение появления электрослабых бозонов дает мощную проверку спонтанного нарушения калибровочной симметрии стандартной модели (СМ) и может быть использовано для поиска новых явлений за пределами СМ. Дополнительные нейтральные векторные бозоны $Z^\\prime$, распадающиеся на заряженные пары калибровочных векторных бозонов $W^+W^-$, прогнозируются во многих сценариях новой физики, включая модели с расширенным калибровочным сектором."
   },
   "CONTROLS": {
-    "IS_REQUIRED": "is required",
-    "SHOULD_BE_DOUBLE": "should be a double",
-    "SUBMIT_TITLE": "Submit",
+    "IS_REQUIRED": "обязателен",
+    "SHOULD_BE_DOUBLE": "должен быть целым",
+    "SUBMIT_TITLE": "Отправить",
     "LINE": {
-      "TITLE": "Request line",
-      "SUBTITLE": "Send request to calculate and render new line",
-      "KSI_TITLE": "Ksi",
-      "EVENTS_COUNT_TITLE": "Count of modulated collision events",
-      "CYCLES_TITLE": "Count of recalculation a point with random seed",
-      "EVENTS": "Events",
-      "CYCLES": "Cycles",
-      "LINE_KSI": "Line with KSI"
+      "TITLE": "Запросить на вычисление линию",
+      "SUBTITLE": "Отправляет запрос на вычисление всей линии с заданными параметрами",
+      "KSI_TITLE": "Кси",
+      "EVENTS_COUNT_TITLE": "Кол-во моделируемых событий",
+      "CYCLES_TITLE": "Кол-во циклов моделирования одной точки",
+      "EVENTS": "Событий",
+      "CYCLES": "Циклов",
+      "LINE_KSI": "Линия с KSI"
     },
     "POINT": {
-      "TITLE": "Request point",
-      "SUBTITLE": "Send request to calculate and render new point",
-      "KSI_TITLE": "Ksi",
-      "MASS_TITLE": "Mass",
-      "EVENTS_COUNT_TITLE": "Count of modulated collision events",
-      "CYCLES_TITLE": "Count of recalculation a point with random seed"
+      "TITLE": "Запросить точку",
+      "SUBTITLE": "Отправляет запрос на вычисление точки",
+      "KSI_TITLE": "Кси",
+      "MASS_TITLE": "Масса",
+      "EVENTS_COUNT_TITLE": "Кол-во моделируемых событий",
+      "CYCLES_TITLE": "Кол-во циклов моделирования одной точки"
     },
     "PROGRESS_BAR": {
-      "TITLE": "Progress bar configuration",
-      "IN_PROGRESS_TITLE": "In progress",
-      "REQUEST_LIMIT_TITLE": "In progress request limit",
-      "QUEUE_TITLE": "Queue",
-      "COMPLETED_TITLE": "Completed"
+      "TITLE": "Прогресс вычислений",
+      "IN_PROGRESS_TITLE": "В процессе вычислений",
+      "REQUEST_LIMIT_TITLE": "Лимит вычисляемых точек в одно время",
+      "QUEUE_TITLE": "Очередь запросов",
+      "COMPLETED_TITLE": "Посчитано"
     }
   }
 }
