zprime result observerd

--- a/angular-src/src/main/web/src/assets/i18n/ru.json
+++ b/angular-src/src/main/web/src/assets/i18n/ru.json
@@ -21,8 +21,8 @@
       "KSI_TITLE": "Кси",
       "EVENTS_COUNT_TITLE": "Кол-во моделируемых событий",
       "CYCLES_TITLE": "Кол-во циклов моделирования одной точки",
-      "EVENTS": "Событий",
-      "CYCLES": "Циклов",
+      "EVENTS": "Кол-во событий",
+      "CYCLES": "Кол-во циклов",
       "LINE_KSI": "Линия с KSI"
     },
     "POINT": {
