--- a/angular-src/src/main/web/src/assets/i18n/ru.json
+++ b/angular-src/src/main/web/src/assets/i18n/ru.json
@@ -9,12 +9,13 @@
   },
   "WELCOME": {
     "CHAPTER": "Программный комплекс для имитационного моделирования рождения Z’-бозонов в протон-протонных столкновениях с учетом эффектов Z-Z’ смешивания",
-    "TEXT": "Изучение появления электрослабых бозонов дает мощную проверку спонтанного нарушения калибровочной симметрии стандартной модели (СМ) и может быть использовано для поиска новых явлений за пределами СМ. Дополнительные нейтральные векторные бозоны $Z^\\prime$, распадающиеся на заряженные пары калибровочных векторных бозонов $W^+W^-$, прогнозируются во многих сценариях новой физики, включая модели с расширенным калибровочным сектором."
+    "TEXT": "Изучение появления электрослабых бозонов дает мощную проверку спонтанного нарушения калибровочной симметрии стандартной модели (СМ) и может быть использовано для поиска новых явлений за пределами СМ. Дополнительные нейтральные векторные бозоны Z', распадающиеся на заряженные пары калибровочных векторных бозонов W+W-, прогнозируются во многих сценариях новой физики, включая модели с расширенным калибровочным сектором."
   },
   "CONTROLS": {
     "IS_REQUIRED": "обязателен",
     "SHOULD_BE_DOUBLE": "должен быть целым",
     "SUBMIT_TITLE": "Отправить",
+    "OFFLINE_CALC": "Отложенный",
     "LINE": {
       "TITLE": "Запросить на вычисление линию",
       "SUBTITLE": "Отправляет запрос на вычисление всей линии с заданными параметрами",
